# sem3_SADT

lab_01/: build_debug.sh  build_release.sh  clear.sh  collect_coverage.sh  consts.h  coplil.sh  go.sh  in.c  in.h  launch_testing.sh  main  main.c  out.c  out.h  proccess.c  proccess.h  readme.md  report.odt  shellcheck_scripts.sh
lab_01/func_tests/: readme.md
lab_01/func_tests/data/: neg_02_in.txt  neg_03_in.txt  neg_04_in.txt  neg_05_in.txt  neg_06_in.txt  neg_07_in.txt  neg_08_in.txt  neg_09_in.txt  neg_10_in.txt  neg_11_in.txt  neg_12_in.txt  neg_13_in.txt  neg_14_in.txt  pos_01_in.txt  pos_01_out.txt  pos_02_in.txt  pos_02_out.txt  pos_03_in.txt  pos_03_out.txt  pos_04_in.txt  pos_04_out.txt  pos_05_in.txt  pos_05_out.txt  pos_06_in.txt  pos_06_out.txt  pos_07_in.txt  pos_07_out.txt  pos_08_in.txt  pos_08_out.txt  pos_09_in.txt  pos_09_out.txt  pos_10_in.txt  tmp.c
lab_01/func_tests/scripts/: checker.sh  (+5 more)
lab_02/: CMakeLists.txt  commands.c  commands.h  consts.h  input.c  input.h  key_and_sort.c  key_and_sort.h  main.c  report2.odt  time_mem_exp.c  time_mem_exp.h
lab_02/inc/: commands.h  consts.h  input.h  key_and_sort.h
lab_02/src/: commands.c  input.c  key_and_sort.c  main.c
lab_03/: .gitignore  .~lock.report3.odt#  consts.h  in_out_put.c  in_out_put.h  main.c  matrix_operations.c  matrix_operations.h  report3.odt  task.txt  time_mem_measure.c  time_mem_measure.h
lab_04/: array.c  array.h  main.c  report4.odt  stack.c  stack.h  time_measure.c  time_measure.h
lab_05/: commands.c  commands.h  main.c  queue.c  queue.h
lab_07/: main.c  tree.c  tree.h
